# wlroots-android-build

./: .gitignore  .gitmodules  README.md  build.sh  build_all.sh  clean_all.sh  clean_builds.sh  combine_libs_for_android.sh  default_env.sourceme  download_packages.sh
external_repos/expat/: build.sh
external_repos/libffi/: build.sh
external_repos/termux-extra-packages/: build.sh  meson.build  meson_options.txt
external_repos/wayland/: build.sh
external_repos/wayland-protocols/: build.sh
external_repos/wlroots/: android.patch  build.sh
external_repos/wlroots/.cache/clangd/index/: allocator.c.0F9FC772C8F074D0.idx  allocator.h.C1103FD2A6E5C501.idx  array.c.56DABEF415ECF118.idx  array.h.4D0A1DD0BA3594CE.idx  atomic.c.946CA2F5027D7E21.idx  backend.c.1FF3E6B01792D4DD.idx  backend.c.2BFDF2EB09ED0806.idx  backend.c.3AF603D9359DA18B.idx  backend.c.5692A7B821EB7AFA.idx  backend.c.6ED632EAD35D59A8.idx  (+253 more)
external_repos/xkbcommon/: build.sh
prebuilt/: README.md
prebuilt/aarch64/lib/pkgconfig/: libffi.pc  libssl.pc  zlib.pc
prebuilt/armv7a/include/openssl/: opensslconf.h
prebuilt/armv7a/lib/: libcrypto.so.1.1  libssl.so.1.1
prebuilt/armv7a/lib/pkgconfig/: pixman-1.pc
prebuilt/i686/include/openssl/: opensslconf.h
prebuilt/i686/lib/: libcrypto.so.1.1  liblzma.so.5.2.5  libssl.so.1.1  libz.so.1.2.11
prebuilt/i686/lib/pkgconfig/: liblzma.pc  openssl.pc
prebuilt/x86_64/include/: expat_config.h
prebuilt/x86_64/lib/: libcrypto.so.1.1  libssl.so.1.1  libz.so.1.2.11
prebuilt/x86_64/lib/pkgconfig/: expat.pc  libcrypto.pc  libxml-2.0.pc
(+5 files in other folders)
